Fix a button hover @extend as well as the vertical-spacing and info-section inheritance

--- a/client/galaxy/style/scss/base.scss
+++ b/client/galaxy/style/scss/base.scss
@@ -1331,7 +1331,7 @@ a.action-button {
     @extend .btn-secondary;
 
     &:hover {
-        @extend .btn.hover !optional;
+        @extend .btn:hover;
     }
     &:active {
         @extend .btn.active;
